CICO-25336 - Rate Manager Override Icon small fix

--- a/rover/css/rate-manager.less
+++ b/rover/css/rate-manager.less
@@ -801,6 +801,7 @@
 
                   .room-type-price {
                                     height: 44px;
+                                    line-height: 24px;
                             }
                 }
               }
@@ -875,6 +876,7 @@
 
                   .room-type-price {
                     height:44px;
+                    line-height: 22px;
                      .room-type-price-value { font-size:21px; }
                   }
                 }
@@ -965,6 +967,10 @@
                       display:block;
                       width:100%;
                       height:24px;
+                     }
+
+                     .icon-report.icon-upsell {
+                      top:2px;
                      }
                   }
                 }
@@ -1075,6 +1081,10 @@
                       width:100%;
                       height:24px;
                      }
+
+                     .icon-report.icon-upsell {
+                      top:2px;
+                     }
                   }
                 }
               }
@@ -1104,6 +1114,9 @@
               font-size:14px;
               width:auto;
               display:block;
+              &.has-override {
+                padding-left: 10px;
+              }
 
               .icon-report.icon-upsell {
                 background-position: 0 -7px;
@@ -1134,6 +1147,7 @@
                                     display: block; 
                           width:100%;
                                     font-size:14px;
+
                                    }
                                 }
                           }
@@ -1158,12 +1172,13 @@
                       display: block; 
                       width:100%;
                       font-size:14px;
+                       height:24px;
                       &.has-override {
                         padding-left: 10px;
                       }
                       .icon-report.icon-upsell {
                         background-position: 0 -7px;
-                        top:2px;
+                        top:0px;
                         background-size:10px;
                         height:10px;
                         width:10px;
